--- a/src/features/game/components/business-list-item-status-data/business-list-item-status-data.scss
+++ b/src/features/game/components/business-list-item-status-data/business-list-item-status-data.scss
@@ -2,26 +2,16 @@
 
 .common {
   display: flex;
-  flex-grow: 3;
-
-  flex-direction: column;
-
-  word-break: break-word;
 }
 
-.controls-footer {
+.button {
+  width: 245px;
+}
+
+
+.timer {
   display: flex;
-}
-
-.profit {
-  margin-bottom: 5px;
-  padding: 5px 10px;
-  text-align: center;
-}
-
-.profit-text {
-  font-size: 20px;
-  font-weight: bold;
-  font-family: Arial;
-  color: $white;
+  align-items: center;
+  justify-content: center;
+  width: 245px;
 }
