--- a/src/features/game/components/business-list-item-disabled/business-list-item-disabled.scss
+++ b/src/features/game/components/business-list-item-disabled/business-list-item-disabled.scss
@@ -10,7 +10,7 @@
   
   border-radius: 10px;
   padding: 10px 15px;
-  margin: 5px 0px;
+  margin: 5px 20px 5px 0px;
 
   background-color: $brown;
 }
