--- a/src/features/game/components/business-list-item/business-list-item.scss
+++ b/src/features/game/components/business-list-item/business-list-item.scss
@@ -9,7 +9,7 @@
   
   border-radius: 10px;
   padding: 20px 15px;
-  margin: 5px 0px;
+  margin: 5px 20px 5px 0px;
 
   background-color: $brown;
 }
